css/style.css
body {
    margin: 0;
    color: white;
    /* background-color: rgb(177, 103, 103); */
    font-family: Arial, Helvetica, sans-serif;
}

canvas {
    /* display: block; */
    /* position: relative; */
    
}
#gameCanvas{
    position: relative;

}
#bannerCanvas {
    display: none;
}


.tog {
    border: rgba(80, 80, 80, 0.4) solid;
    /* display: inline-block;
    position: relative; */
    position: absolute;
    /* left: 50%; */
	/* margin: auto;     */
    width: 15vw;
    height: 15vh;
}
p {
   
}
.navText {
    /* -webkit-transform: rotate(-90deg); */
    color: black;
    margin: 0;
    font-size: 2em;
    /* position: absolute; */
    /* top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%) */
}
img {
   
}

.buttonContent{
width: 90%;
height: 90%;
    background-color: #468 ;
    margin: 0;
position: absolute;
top: 50%;
left: 50%;
margin-right: -50%; 
transform: translate(-50%, -50%)

}

.but {
    /* background: rgba(80, 80, 80, 1.0); */
    border: rgba(80, 80, 80, 0.9) solid;
    position: absolute;
       /* background-color: #468 ; */
/* display: inline-block;
position: relative; */
    color: rgba(80, 80, 80, 0.0);
    /* background-color: #468 ; */
	/* position: absolute  ; */
    border: rgba(80, 80, 80, 0.9) solid;
    width: 15vw;
    height: 5vh;
    /* border: 0px; */
    /* padding: 20px; */

}
#infoButton{

    top:75%;
    left: 12%;
}

#homeButton{
left: 15%;
    top: 82%;
}
#instaButton{

    top: 75%;
    left: 73%;

}
#emailButton{

        top: 82%;
        left: 70%;

}
.icon{
    height: 80%;
    position: absolute;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%) ;
}

/* p{position: absolute; left: 50%;} */
/* .nav{
    position: absolute;
    width: 5vw;
    height: 100%;
    border-top: 0px solid;
    border-bottom: 0px dotted #f00;
    /* background-color: rgba(53, 228, 175, 0.6); */

/* } */ 


#mainContent{
    /* opacity: 0.0; */
    color: rgba(80, 80, 80, 0.0);
	position: absolute;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;
  	border: rgba(80, 80, 80, 0.9) solid;
	margin: auto;
    width: 60vw;
    height: 80vh;
    /* background-color: #fB9; */
    /* //rgba(80, 80, 80, 0.9); */
}
#home  {
    display:    inline;
    /* color: rgba(0, 0, 0, 1.0); */
}
#info  {
    display:    none;
    font-size: 7em;
    /* color: rgba(0, 0, 0, 1.0); */
} 
#insta{
    font-size: 7em;

    display: none;
}
#email{
    font-size: 7em;

    display: none;
}

.mainContentText{
    font-size: 15vw; 
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%)
}


/* ::selection {
    background: #ffb7b7; /* WebKit/Blink Browsers */
  /* }  */

span{
    position:absolute; 
    width:100%;
    height:100%;
    top:0;
    left: 0;
  
    z-index: 1;
  
    /* fixes overlap error in IE7/8, 
       make sure you have an empty gif */
    /* background-image: url('empty.gif'); */
  }  

  ::selection{
    background-color:indigo !important;
    color:#fff !important;
}

/* The switch - the box around the slider */
.switch {
    position: absolute;
    /* display: inline-block; */
    width: 60px;
    height: 3vh;
    left: 20.5vw;
    top: 10.5vh;
    border: rgba(80, 80, 80, 0.9) solid;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 80%;
    width: 26px;
    left: 4px;
    bottom: 10%;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    /* margin-top: auto; */
  }
  
  input:checked + .slider {
    /* background-color: #2196F3; */
  }
  
  input:focus + .slider {
    /* box-shadow: 0 0 1px #2196F3; */
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  #egg {
    width: 2.5vh;
    height: 4vh;
    /* background: #ffc000; */
    position: absolute;
    border: rgba(80, 80, 80, 0.9) solid 2px;
    right: 20.5vw;
    top: 10.5vh;
    /* display: block; */
    -webkit-border-radius: 63px 63px 63px 63px / 108px 108px 72px 72px;
    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
}

